objects/Cost_Share_Review__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>GLLA_Agreement__c</referenceTo>
        <relationshipName>Quarterly_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cash_Contributions__c</fullName>
        <label>Cash Contributions</label>
        <summarizedField>Cost_Share_Contribution__c.Cash_Amount__c</summarizedField>
        <summaryForeignKey>Cost_Share_Contribution__c.Cost_Share_Review__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Review_Status__c</fullName>
        <label>Cost-Share Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Final Notification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Federal_Contribution_Summary__c</fullName>
        <label>Federal Contribution Summary</label>
        <summarizedField>Cost_Share_Contribution__c.Federal_Amount__c</summarizedField>
        <summaryForeignKey>Cost_Share_Contribution__c.Cost_Share_Review__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GLLA_Finance_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GLLA Finance Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quarterly_Review</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GLLA_Project_Name__c</fullName>
        <description>GLLA Project Name, 2018.09.18</description>
        <formula>Agreement__r.Project_Number__r.GLLA_Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GLLA Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Contributions__c</fullName>
        <label>In Kind Contributions</label>
        <summarizedField>Cost_Share_Contribution__c.In_Kind_Amount__c</summarizedField>
        <summaryForeignKey>Cost_Share_Contribution__c.Cost_Share_Review__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Master_Project_ID__c</fullName>
        <description>GLLA Master Project ID, 2018.09.18</description>
        <formula>Agreement__r.Project_Number__r.Master_Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORC_GLLA_Finance_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ORC GLLA Finance Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quarterly_Review1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_code__c</fullName>
        <formula>Agreement__r.Organization_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Agreement__r.Project_Number__r.GLLA_Project_Name__c</formula>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qtr__c</fullName>
        <label>Qtr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RR_Branch_Chief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RR Branch Chief</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quarterly_Review3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RR_Section_Chief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RR Section Chief</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quarterly_Review2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_End_Date__c</fullName>
        <label>Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Start_Date__c</fullName>
        <label>Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Project_Code__c</fullName>
        <formula>Agreement__r.Site_Project_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site/Project Code</label>
        <type>Text</type>
    </fields>
    <description>Initially used to store the GLLA Cost-Share Review details, but available for other purposes, too.</description>
    <label>Cost-Share Review</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Cost-Share Review ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost-Share Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Review_Start_Date__c</columns>
        <columns>Review_End_Date__c</columns>
        <columns>Cost_Share_Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>